--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
 
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+
+    <string name="boton_buscador">Buscar</string>
 </resources>
