Different home page for user type

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,13 +10,12 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
+    <string name="menu_home_admin">Home</string>
     <string name="menu_gestionar_trabajadores">Gestionar trabajadores</string>
     <string name="menu_buscador_trabajadores">Buscador trabajadores</string>
     <string name="menu_mis_registros">Mis registros</string>
 
-    <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
 
     <string name="boton_buscador">Buscar</string>
-
 </resources>
