--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="menu_send">Send</string>
 
     <string name="boton_buscador">Buscar</string>
+    <string name="boton_ver_registros">Ver registros</string>
 </resources>
