--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="menu_mis_registros">Mis registros</string>
 
     <string name="menu_send">Send</string>
+    <string name="menu_receive">Messages</string>
 
     <string name="boton_buscador">Buscar</string>
     <string name="boton_ver_registros">Ver registros</string>
